lighten elm-grove extension

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     :root {
       /* Grove + friends */
       --grove-green: #2ca25f;
-      --grove-green-proposed: #1b7a3a; /* darker green for Elm/Orange option */
+      --grove-green-proposed: #7fdca0; /* lighter green for Elm/Orange option */
       --grove-green-halo: #c7e9c0;
 
       --accent-orange: #f97316;    /* transit */
